--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-test
-heel
+The files in this folder are my projects files that I created while I was taking the WDV101 college course through DMACC. These files can also be found by navigating through the following website: http://www.sabarishmogallapalli.name/
